# city-builder

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: formatting.yml  rust.yml
city_builder/: Cargo.toml
city_builder/src/: console.rs  main.rs
city_builder/src/game/: mod.rs
city_builder/src/game/buildings/: building_spawner.rs  components.rs  mod.rs
city_builder/src/game/roads/: components.rs  mod.rs  road_creation.rs  road_mesh.rs  road_network.rs  road_pathfinding.rs
city_builder/src/game/vehicles/: components.rs  mod.rs  vehicle_driving.rs
city_builder/src/lib/: bezier.rs
src/: main.rs
src/game/: mod.rs
src/game/buildings/: building_spawner.rs  components.rs  mod.rs
src/game/roads/: components.rs  road_mesh.rs  road_network.rs
src/game/vehicles/: vehicle_driving.rs
