[package]
name = "city_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Bevy
bevy = "0.7.0"
bevy_console = "0.3.1"
bevy-inspector-egui = "0.11.0"

# Collections
slotmap = "1.0.6"
priority-queue = "1.2.2"

# Helpers
rand = "0.8.5"